force-app/main/default/objects/Employee__c/fields/Applicant_Record__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Record</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>