force-app/main/default/objects/Employee__c/fields/Onboarding_Buddy__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Buddy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Buddy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>