force-app/main/default/objects/Employee__c/fields/OnboardingBuddy__c.field-meta.xml
<CustomField>
    <fullName>OnboardingBuddy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Buddy</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Buddies</relationshipLabel>
    <relationshipName>Buddies</relationshipName>
    <type>Lookup</type>
</CustomField>