force-app/main/default/objects/Employee__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CSG - CFL</fullName>
            </value>
            <value>
                <fullName>CSG - Services</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Solution Engineer</fullName>
            </value>
            <value>
                <fullName>Alliances &amp; Channels</fullName>
            </value>
            <value>
                <fullName>Market Readiness</fullName>
            </value>
            <value>
                <fullName>Sales Strategy</fullName>
            </value>
            <value>
                <fullName>Products - Other</fullName>
            </value>
            <value>
                <fullName>Products - Product Manager</fullName>
            </value>
            <value>
                <fullName>Products - Program Manager</fullName>
            </value>
            <value>
                <fullName>Products - User Experience</fullName>
            </value>
            <value>
                <fullName>Products - Content Experience</fullName>
            </value>
            <value>
                <fullName>Technology - Developer</fullName>
            </value>
            <value>
                <fullName>Technology - Quality Engineer</fullName>
            </value>
            <value>
                <fullName>Technology - Other</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Hotel Operations Manager</fullName>
                <label>Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>